# tforward

./: .editorconfig  Cargo.toml  Dockerfile  README.md
.github/workflows/: deployment.yaml
src/: bot.rs  main.rs  telemetry.rs
src/bot/: handler.rs  message_sender.rs  settings.rs
