[package]
name = "tforward"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
openssl-probe = "0.1.5"
opentelemetry = "0.24.0"
opentelemetry-appender-tracing = "0.5.0"
opentelemetry-otlp = { version = "0.17.0", features = [
    "grpc-tonic",
    "tls",
    "tls-roots",
] }
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
serde = "1.0.207"
serde_json = "1.0.125"
teloxide = { version = "0.12.2", features = ["webhooks-axum", "macros"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "sync"] }
tonic = { version = "0.12.1", features = ["tls", "tls-roots"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-futures = "0.2.5"
tracing-opentelemetry = "0.25.0"
tracing-subscriber = "0.3.18"

[lints.clippy]
all = "deny"
correctness = "warn"
complexity = "warn"
pedantic = "warn"
nursery = "warn"
perf = "warn"
cargo = "allow"
